replace literal with a space

--- a/src/app/pages/details/details-tab/details-tab-polish.html
+++ b/src/app/pages/details/details-tab/details-tab-polish.html
@@ -56,7 +56,7 @@
                 <div if="model.digital_isbn_13">ISBN-13: {model.digital_isbn_13}</div>
             </div>
             <div class="loc-ibook-isbn" if="model.ibook_isbn_10 || model.ibook_isbn_10">
-                <h4>iBooks<span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">&nbsp;Part 1</span>:</h4>
+                <h4>iBooks<span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13"> Part 1</span>:</h4>
                 <div if="model.ibook_isbn_10">ISBN-10: {model.ibook_isbn_10}</div>
                 <div if="model.ibook_isbn_13">ISBN-13: {model.ibook_isbn_13}</div>
             </div>
