--- a/src/app/pages/details/phone-view/publication-details/publication-details.html
+++ b/src/app/pages/details/phone-view/publication-details/publication-details.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="loc-ibook-isbn" if="model.ibook_isbn_10 || model.ibook_isbn_10">
-        <h4>iBooks<span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13">&nbsp;Part 1</span>
+        <h4>iBooks<span if="model.ibook_volume_2_isbn_10 || model.ibook_volume_2_isbn_13"> Part 1</span>
         </h4>
         <div>
             <div if="model.ibook_isbn_10">ISBN-10: {model.ibook_isbn_10}</div>
