Add Partners tab for Optimizely testing

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -134,6 +134,13 @@
         @include wider-than($phone-max) {
             display: block;
         }
+
+        // Optimizely selector
+        &.hide-tab {
+            .tab:nth-child(3) {
+                display: none;
+            }
+        }
     }
 
     .tab-controller {
