--- a/src/app/pages/technology/technology.html
+++ b/src/app/pages/technology/technology.html
@@ -1,57 +1,11 @@
 <template args="model">
     <if condition="model">
-        <section id="banner">
-            <div class="boxed">
-                <div class="main-box">
-                    <div class="box first"></div>
-                    <div class="box second"></div>
-                    <div class="orange-part">
-                        <h1>{model.banner.headline}</h1>
-                        <div class="description" data-html="banner.description" skip="true"></div>
-                        <a class="btn outlined white-on-orange" href={model.banner.button.url}>
-                            {model.banner.button.text}
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="student-overlay"></div>
+        <section id="banner" skip="true">
         </section>
-        <section id="steps">
-            <div class="text-content">
-                <h2>{model.steps.headline}</h2>
-            </div>
-            <div class="boxed-row">
-                <div each="step in model.steps.items" class="step">
-                    <h3>{1 + $item}.</h3>
-                    <book-selector if="step.selector" skip="true"></book-selector>
-                    <div if="step.description" class="outlined btn {step.url ? '' : 'dimmed'}">
-                        <if condition="step.url">
-                            <a href="{`${step.url}${step.hash}`}" target="_blank">{step.description}</a>
-                        <else>
-                            {step.description}
-                        </if>
-                    </div>
-                </div>
-            </div>
+        <section id="steps" skip="true">
         </section>
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-        <section id="tutor">
-            <div class="boxed">
-                <div class="header">
-                    <h1>{model.tutor.headline}</h1>
-                    <img src="/images/openstax-tutor/tutor-logo.svg">
-                </div>
-            </div>
-            <div class="boxed tall-relative">
-                <div class="description-block">
-                    <h2>{model.tutor.subhead}</h2>
-                    <div data-html="tutor.description" skip="true"></div>
-                    <div class="buttons">
-                        <a each="b in model.tutor.buttons" href="{b.url}" class="btn">{b.text}</a>
-                    </div>
-                </div>
-            </div>
-            <img class="border-image" src="/images/technology/technology-bearscape.svg">
+        <section id="tutor" skip="true">
         </section>
     </if>
 </template>
