--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
@@ -14,7 +14,7 @@
 
 // Keeps rightmost menu from hanging off the screen
 .rightmost .dropdown-container {
-    right: -2rem;
+    right: -100%;
 
     @include width-up-to($tablet-max) {
         right: auto;
