Make footer link pages DRY

--- a/src/app/pages/footer-page/footer-page.scss
+++ b/src/app/pages/footer-page/footer-page.scss
@@ -1,6 +1,6 @@
 @import 'pattern-library/core/pattern-library/headers';
 
-.careers-page {
+.footer-page {
 
     .text-content {
         padding: 4rem $normal-margin;
