--- a/src/app/pages/footer-page/footer-page.html
+++ b/src/app/pages/footer-page/footer-page.html
@@ -1,5 +1,5 @@
 <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
 <main id="maincontent" class="text-content left-justified">
-    <h1 data-html="intro_heading" skip="true"></h1>
-    <div data-html="careers_content" skip="true"></div>
+    <h1 data-html="heading" skip="true"></h1>
+    <div data-html="content" skip="true"></div>
 </main>
