--- a/src/app/pages/general/general.html
+++ b/src/app/pages/general/general.html
@@ -3,7 +3,7 @@
         <h1>{model.title}</h1>
         <div each="item in model.body">
             <h2 if="item.type === 'heading'">{item.value}</h2>
-            <img if="item.type === 'image' && item.file" src="{item.file}">
+            <img if="item.type === 'image' && item.value.file" src="{item.value.file}" alt="{item.value.title}">
             <div if="['paragraph', 'html'].includes(item.type)" data-html="body[{$item}].value" skip="true"></div>
             <div data-region-for="{$item}" skip="true"></div>
         </div>
