--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -1,6 +1,6 @@
 <template args="model">
     <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
-        <li class="nav-menu-item"><a href="/impact" role="menuitem">Our Impact</a></li>
+        <li class="nav-menu-item"><a href="/annual-report" role="menuitem">Our Impact</a></li>
         <li class="nav-menu-item"><a href="/foundation" role="menuitem">Supporters</a></li>
         <li if="model.showBlog" class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>
         <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
