--- a/src/app/pages/general/general.scss
+++ b/src/app/pages/general/general.scss
@@ -21,6 +21,10 @@
         }
     }
 
+    img {
+        max-width: 100%;
+    }
+
     .multicolumn {
         display: grid;
         grid-column-gap: #{2 * $normal-margin};
