--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
         <div class="toggle-datalist-footer">
-            <span class="sub-testimonial">submit your testimonials</span>
+            <span class="sub-testimonial">Submit your testimonial</span>
             <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
         </div>
 </template>
