--- a/src/app/pages/impact-dev/map/schoolinfo.html
+++ b/src/app/pages/impact-dev/map/schoolinfo.html
@@ -18,7 +18,16 @@
                 <div class="rcolumn-body">{model.dataArray[model.itemIndex].fields.key_institutional_partner === true ? 'Yes' : 'No'}</div>
             </div>
         </div>
-        <div id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
+        <div class="testimonial-head-container">
+            <if condition="model.dataArray[model.itemIndex].fields.testimonial !== null">
+                <div id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
+            <else>
+                <div class="toggle-datalist-footer">
+                    <span class="sub-testimonial">Submit your testimonial</span>
+                    <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
+                </div>
+            </if>
+        </div>
     </div>
     <div class="right-btn-link nxt-previous-links" data-action="next"></div>
 </template>
