Include Chegg e-reader link in get-this-title (wip)

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -79,6 +79,14 @@
                     </span>
                 </a>
             </div>
+            <div if="model.cheggLink" class="option">
+                <a href="{model.cheggLink}"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
+                <img src="https://via.placeholder.com/32/FFF/027eb5?text=C">
+                <span class="text">
+                    Download for Chegg E-Reader
+                </span>
+            </div>
         </div>
     </div>
 </template>
