Add Chegg e-reader link to Get This Title

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -82,9 +82,9 @@
             <div if="model.cheggLink" class="option">
                 <a href="{model.cheggLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                <img src="https://via.placeholder.com/32/FFF/027eb5?text=C">
+                <img class="logo-img" src="/images/icons/Chegglogo.svg">
                 <span class="text">
-                    Download for Chegg E-Reader
+                    {model.cheggLinkText}
                 </span>
             </div>
         </div>
