--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -89,6 +89,10 @@
             font-size: 2.5rem;
         }
 
+        .logo-img {
+            height: 2rem;
+        }
+
         &:last-child {
             border-bottom: 0;
         }
