--- a/src/app/pages/rover-by-openstax/rover-by-openstax.html
+++ b/src/app/pages/rover-by-openstax/rover-by-openstax.html
@@ -56,7 +56,7 @@
                     <input type="hidden" name="lead_source" value="Interest Form">
                     <input type="hidden" name="Interested_in_Rover__c" value="1">
                     <div class="signup-form" skip="true"></div>
-                    <button type="submit">Submit</button>
+                    <button if="model.roleIsSelected" type="submit">Submit</button>
                 </form>
                 <div id="form-response-region" skip="true"></div>
             </div>
