Change image member used on Annual Report page

--- a/src/app/pages/annual-report/annual-report.html
+++ b/src/app/pages/annual-report/annual-report.html
@@ -1,6 +1,6 @@
 <template args="model">
     <if condition="model">
-        <section id="banner" style="background-image: url({model.improvingAccess.backgroundImage.file})" skip="true">
+        <section id="banner" style="background-image: url({model.improvingAccess.backgroundImage.image})" skip="true">
         </section>
         <section class="light" id="revolution" skip="true"></section>
         <section id="founding" skip="true"></section>
@@ -10,7 +10,7 @@
         <section id="disruption" class="light" skip="true"></section>
         <section id="lookingAhead" class="light" skip="true"></section>
         <section id="map"
-            style="background-image: url({model.map.backgroundImage.file}); position: relative;"
+            style="background-image: url({model.map.backgroundImage.image}); position: relative;"
             skip="true"
         ></section>
         <section id="tutor" class="no-padding" style="position: relative" skip="true"></section>
