--- a/src/app/pages/annual-report/annual-report.scss
+++ b/src/app/pages/annual-report/annual-report.scss
@@ -47,6 +47,7 @@ $light: #f8f8f8;
             .bottom-image {
                 bottom: 0;
                 position: absolute;
+                width: 100%;
             }
         }
     }
