--- a/src/app/pages/annual-report/section/founding.html
+++ b/src/app/pages/annual-report/section/founding.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="text-overlapping-photo">
-        <img src="{model.portrait}" alt="{model.portraitAlt}">
+        <img src="{model.portrait.image}" alt="{model.portrait.altText}">
         <div class="text-block card">
             <h2>{model.heading}</h2>
             <div>{model.description}</div>
