--- a/src/app/pages/annual-report/section/sustainability.html
+++ b/src/app/pages/annual-report/section/sustainability.html
@@ -4,6 +4,6 @@
         <div>{model.description}</div>
     </div>
     <div class="icon-row">
-        <img each="icon in model.partners" src="icon.image" alt="icon.imageAlt">
+        <img each="icon in model.partners" src="icon.image" alt="icon.altText">
     </div>
 </template>
