--- a/src/app/pages/annual-report/section/tutor.html
+++ b/src/app/pages/annual-report/section/tutor.html
@@ -6,9 +6,9 @@
             <a href="{model.link}">{model.linkText}</a>
         </div>
         <div class="right-image">
-            <img src="{model.rightImage.image}" alt="{model.rightImage.imageAlt}">
+            <img src="{model.rightImage.image}" alt="{model.rightImage.altText}">
         </div>
     </div>
     <img class="bottom-image"
-        src="{model.bottomImage.image}" alt="{model.bottomImage.imageAlt}">
+        src="{model.bottomImage.image}" alt="{model.bottomImage.altText}">
 </template>
