Add First__c indicator to Adoption form submission

--- a/src/app/pages/adoption/hidden-fields/hidden-fields.html
+++ b/src/app/pages/adoption/hidden-fields/hidden-fields.html
@@ -7,4 +7,5 @@
     <input type="hidden" name="Subject__c" value="{model.book}">
     <input type="hidden" name="Adoption_Status__c" value={model.adoptionStatus}>
     <input type="hidden" name="Number_of_Students__c" value={model.numberOfStudents}>
+    <input type="hidden" name="First__c" value={model.isFirst}>
 </template>
