--- a/src/app/pages/annual-report/section/lookingAhead.html
+++ b/src/app/pages/annual-report/section/lookingAhead.html
@@ -4,6 +4,6 @@
             <h2>{model.heading}</h2>
             <div>{model.description}</div>
         </div>
-        <img src="{model.image}" alt="{model.imageAlt}">
+        <img src="{model.image.image}" alt="{model.image.altText}">
     </div>
 </template>
