--- a/src/app/pages/annual-report/section/reach.html
+++ b/src/app/pages/annual-report/section/reach.html
@@ -2,9 +2,8 @@
     <div class="text-block">
         <h2>{model.heading}</h2>
         <div data-html="description" skip="true"></div>
-        <h3>{model.factHeading}</h3>
     </div>
-    <div class="fact-boxes">
+    <div class="fact-boxes scroll-on-mobile">
         <div each="fact in model.facts" class="card">
             <div class="color-header"></div>
             <div class="card-content">
