--- a/src/app/pages/annual-report/section/revolution.html
+++ b/src/app/pages/annual-report/section/revolution.html
@@ -7,11 +7,11 @@
                 <img class="mobile-only little-headshot"
                     src="{model.portrait.image}" alt="{model.portrait.altText}">
                 <div>
-                    <img src="{model.signature.image}" alt="{model.signature.altText}">
+                    <img src="{model.signatureImage.image}" alt="{model.signatureImage.altText}">
                     <div data-html="signatureText" skip="true"></div>
                 </div>
             </div>
         </div>
-        <img class="hide-on-mobile" src="{model.portrait}" alt="{model.portraitAlt}">
+        <img class="hide-on-mobile" src="{model.portrait.image}" alt="{model.portrait.altText}">
     </div>
 </template>
