--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -80,85 +80,14 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
 
     .sticky-footer {
         background-color: $sea-water;
-        bottom: 0;
         color: text-color(white);
-        display: flex;
-        font-weight: inherit;
-        justify-content: space-around;
-        max-height: 9rem;
-        padding: 0.5rem 1rem;
-        position: fixed;
-        /* property  duration  delay */
-        transition: padding  0.1s,
-                    height   0.3s  0.2s;
-        width: 100%;
-        z-index: 4;
 
-        @include wider-than($tablet-max) {
-            padding: $normal-margin 3rem;
-        }
-
-        &.collapsed {
-            max-height: 0;
-            padding: 0;
-            transition: padding  0.3s,
-                        height   0.1s;
-
-            .button-group {
-                opacity: 0;
-                transition: opacity 0.2s;
-            }
-        }
-
-        .button-group {
-            align-items: center;
-            display: flex;
-            flex: 1 1 40%;
-            justify-content: center;
-            padding-left: 2rem;
-            text-align: right;
-            transition: opacity 0.2s 0.1s;
-
-            @include wider-than($tablet-max) {
-                padding-left: 6rem;
-            }
-
-            @include width-up-to($phone-max) {
-                padding: 0;
-            }
-
-            &:first-child {
-                padding-left: 0;
-                text-align: left;
-
-                .btn {
-                    background-color: os-color(light-blue);
-                }
-            }
-
-            :first-child {
-                margin-right: $normal-margin;
-            }
+        .button-group:first-child .btn {
+            background-color: os-color(light-blue);
         }
 
         .btn {
-            @include set-font(helper-label);
-
             background-color: $deep-teal;
-            border: 0;
-            flex-basis: 20rem;
-            margin: 0;
-            padding: 1rem 3rem;
-
-            @include width-up-to($phone-max) {
-                flex-basis: calc(100% - 1.5rem);
-                margin: 0;
-            }
-
-            @media (max-width: 565px) {
-                flex-basis: 17rem;
-                padding: 1rem;
-            }
         }
 
         .description {
