Touchup new Impact page
Per comments in https://docs.google.com/document/d/1Z95NxjYTMXu_BYQcmIBIalZ2bPNkch1ipoiiEOtSzWs/edit

--- a/src/app/pages/annual-report/annual-report.html
+++ b/src/app/pages/annual-report/annual-report.html
@@ -13,7 +13,7 @@
             style="background-image: url({model.map.backgroundImage.image}); position: relative;"
             skip="true"
         ></section>
-        <section id="tutor" class="no-padding" style="position: relative" skip="true"></section>
+        <section id="tutor" style="position: relative" skip="true"></section>
         <section id="philanthropic-partners" class="white" skip="true"></section>
         <section id="giving" class="white" skip="true"></section>
     </if>
