--- a/src/app/pages/annual-report/section/revolution.html
+++ b/src/app/pages/annual-report/section/revolution.html
@@ -7,7 +7,7 @@
                 <img class="mobile-only little-headshot"
                     src="{model.portrait.image}" alt="{model.portrait.altText}">
                 <div>
-                    <img src="{model.signatureImage.image}" alt="{model.signatureImage.altText}">
+                    <img class="signature-image" src="{model.signatureImage.image}" alt="{model.signatureImage.altText}">
                     <div data-html="signatureText" skip="true"></div>
                 </div>
             </div>
