--- a/src/app/pages/annual-report/section/map.scss
+++ b/src/app/pages/annual-report/section/map.scss
@@ -2,14 +2,9 @@
 
 .annual-report.page .map {
 
-    @include width-between($phone-max, $tablet-max) {
+    @include wider-than($phone-max) {
         padding-bottom: 16rem;
         padding-top: 16rem;
-    }
-
-    @include wider-than($tablet-max) {
-        padding-bottom: 32rem;
-        padding-top: 32rem;
     }
 
     .floating {
