--- a/src/app/pages/annual-report/section/revolution.scss
+++ b/src/app/pages/annual-report/section/revolution.scss
@@ -2,11 +2,19 @@
 
 .annual-report.page .revolution {
 
+    .text-left-photo-right > :nth-child(2) {
+        max-width: 36rem;
+    }
+
     .signature-section {
         @include width-up-to($phone-max) {
             display: grid;
             grid-column-gap: $normal-margin;
             grid-template-columns: auto 1fr;
+        }
+
+        .signature-image {
+            max-width: calc(15rem + 3vw);
         }
     }
 
