--- a/src/app/pages/impact-dev/map/schoolinfo.html
+++ b/src/app/pages/impact-dev/map/schoolinfo.html
@@ -23,7 +23,7 @@
                 <div id="testimonialHead-{model.itemIndex}" class="testimonial-head">Testimonials</div>
             <else>
                 <div class="toggle-datalist-footer">
-                    <span class="sub-testimonial">Submit your testimonial</span>
+                    <a href="#" class="sub-testimonial">Submit your testimonial</a>
                     <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
                 </div>
             </if>
